
add_executable(tester1 basic_c_tests/CI-funptr.c)
add_executable(	tester2 basic_c_tests/CI-global.c)
add_executable(	tester3 basic_c_tests/CI-local.c)
add_executable(	tester4 basic_c_tests/array-constIdx.c)
add_executable(	tester5 basic_c_tests/array-varIdx.c)
add_executable(	tester6 basic_c_tests/array-varIdx2.c)
add_executable(	tester7 basic_c_tests/branch-call.c)
add_executable(	tester8 basic_c_tests/branch-intra.c)
add_executable(	tester9 basic_c_tests/constraint-cycle-copy.c)
add_executable(	tester10 basic_c_tests/constraint-cycle-field.c)
add_executable(	tester11 basic_c_tests/constraint-cycle-pwc.c)
add_executable(	tester12 basic_c_tests/field-ptr-arith-constIdx.c)
add_executable(	tester13 basic_c_tests/field-ptr-arith-varIdx.c)
add_executable(	tester15 basic_c_tests/funptr-nested-call.c)
add_executable(	tester16 basic_c_tests/funptr-simple.c)
add_executable(	tester17 basic_c_tests/funptr-struct.c)
add_executable(	tester18 basic_c_tests/global-array.c)
add_executable(	tester19 basic_c_tests/global-call-noparam.c)
add_executable(	tester20 basic_c_tests/global-call-struct.c)
add_executable(	tester21 basic_c_tests/global-call-twoparms.c)
add_executable(	tester22 basic_c_tests/global-const-struct.c)
add_executable(	tester23 basic_c_tests/global-funptr.c)
add_executable(	tester24 basic_c_tests/global-initializer.c)
add_executable(	tester25 basic_c_tests/global-nested-calls.c)
add_executable(	tester26 basic_c_tests/global-simple.c)
add_executable(	tester27 basic_c_tests/heap-indirect.c)
add_executable(	tester28 basic_c_tests/heap-linkedlist.c)
add_executable(	tester29 basic_c_tests/heap-wrapper.c)
add_executable(	tester30 basic_c_tests/int2pointer.c)
add_executable(	tester31 basic_c_tests/mesa.c)
add_executable(	tester32 basic_c_tests/ptr-dereference1.c)
add_executable(	tester33 basic_c_tests/ptr-dereference2.c)
add_executable(	tester34 basic_c_tests/ptr-dereference3.c)
add_executable(	tester35 basic_c_tests/spec-equake.c)
add_executable(	tester37 basic_c_tests/spec-mesa.c)
add_executable(	tester38 basic_c_tests/spec-parser.c)
add_executable(	tester40 basic_c_tests/struct-array.c)
add_executable(	tester41 basic_c_tests/struct-assignment-direct.c)
add_executable(	tester42 basic_c_tests/struct-assignment-indirect.c)
add_executable(	tester43 basic_c_tests/struct-assignment-nested.c)
add_executable(	tester44 basic_c_tests/struct-field-multi-dereference.c)
add_executable(	tester45 basic_c_tests/struct-incompab-typecast-nested.c)
add_executable(	tester46 basic_c_tests/struct-incompab-typecast.c)
add_executable(	tester47 basic_c_tests/struct-instance-return.c)
add_executable(	tester48 basic_c_tests/struct-nested-1-layer.c)
add_executable(	tester49 basic_c_tests/struct-nested-2-layers.c)
add_executable(	tester50 basic_c_tests/struct-nested-array1.c)
add_executable(	tester51 basic_c_tests/struct-nested-array2.c)
add_executable(	tester52 basic_c_tests/struct-nested-array3.c)
add_executable(	tester53 basic_c_tests/struct-onefld.c)
add_executable(	tester54 basic_c_tests/struct-simple.c)
add_executable(	tester55 basic_c_tests/struct-twoflds.c)
add_test(Tester1 tester1 wpa -ander -stat=false)
add_test(Tester2 tester2 wpa -ander -stat=false)
add_test(Tester3 tester3 wpa -ander -stat=false)
add_test(Tester4 tester4 wpa -ander -stat=false)
add_test(Tester5 tester5 wpa -ander -stat=false)
add_test(Tester6 tester6 wpa -ander -stat=false)
add_test(Tester7 tester7 wpa -ander -stat=false)
add_test(Tester8 tester8 wpa -ander -stat=false)
add_test(Tester9 tester9 wpa -ander -stat=false)
add_test(Tester10 tester10 wpa -ander -stat=false)
add_test(Tester11 tester11 wpa -ander -stat=false)
add_test(Tester12 tester12 wpa -ander -stat=false)
add_test(Tester13 tester13 wpa -ander -stat=false)
add_test(Tester15 tester15 wpa -ander -stat=false)
add_test(Tester16 tester16 wpa -ander -stat=false)
add_test(Tester17 tester17 wpa -ander -stat=false)
add_test(Tester18 tester18 wpa -ander -stat=false)
add_test(Tester19 tester19 wpa -ander -stat=false)
add_test(Tester20 tester20 wpa -ander -stat=false)
add_test(Tester21 tester21 wpa -ander -stat=false)
add_test(Tester22 tester22 wpa -ander -stat=false)
add_test(Tester23 tester23 wpa -ander -stat=false)
add_test(Tester24 tester24 wpa -ander -stat=false)
add_test(Tester25 tester25 wpa -ander -stat=false)
add_test(Tester26 tester26 wpa -ander -stat=false)
add_test(Tester27 tester27 wpa -ander -stat=false)
add_test(Tester28 tester28 wpa -ander -stat=false)
add_test(Tester29 tester29 wpa -ander -stat=false)
add_test(Tester30 tester30 wpa -ander -stat=false)
add_test(Tester31 tester31 wpa -ander -stat=false)
add_test(Tester32 tester32 wpa -ander -stat=false)
add_test(Tester33 tester33 wpa -ander -stat=false)
add_test(Tester34 tester34 wpa -ander -stat=false)
add_test(Tester35 tester35 wpa -ander -stat=false)
add_test(Tester37 tester37 wpa -ander -stat=false)
add_test(Tester38 tester38 wpa -ander -stat=false)
add_test(Tester40 tester40 wpa -ander -stat=false)
add_test(Tester41 tester41 wpa -ander -stat=false)
add_test(Tester42 tester42 wpa -ander -stat=false)
add_test(Tester43 tester43 wpa -ander -stat=false)
add_test(Tester44 tester44 wpa -ander -stat=false)
add_test(Tester45 tester45 wpa -ander -stat=false)
add_test(Tester46 tester46 wpa -ander -stat=false)
add_test(Tester47 tester47 wpa -ander -stat=false)
add_test(Tester48 tester48 wpa -ander -stat=false)
add_test(Tester49 tester49 wpa -ander -stat=false)
add_test(Tester50 tester50 wpa -ander -stat=false)
add_test(Tester51 tester51 wpa -ander -stat=false)
add_test(Tester52 tester52 wpa -ander -stat=false)
add_test(Tester53 tester53 wpa -ander -stat=false)
add_test(Tester54 tester54 wpa -ander -stat=false)
add_test(Tester55 tester55 wpa -ander -stat=false)

#flow-sensitive tests
add_executable(tester56 fs_tests/array_alias_1.c)
add_executable(tester57 fs_tests/array_alias_2.c)
add_executable(tester58 fs_tests/array_alias_3.c)
add_executable(tester59 fs_tests/array_alias_4.c)
add_executable(tester60 fs_tests/array_alias_5.c)
add_executable(tester61 fs_tests/branch_1.c)
add_executable(tester62 fs_tests/branch_2.c)
add_executable(tester63 fs_tests/branch_3.c)
add_executable(tester64 fs_tests/function_pointer.c)
add_executable(tester65 fs_tests/function_pointer_2.c)
add_executable(tester66 fs_tests/global_1.c)
add_executable(tester67 fs_tests/global_2.c)
add_executable(tester68 fs_tests/global_3.c)
add_executable(tester69 fs_tests/global_4.c)
add_executable(tester70 fs_tests/global_5.c)
add_executable(tester71 fs_tests/pcycle1.c)
add_executable(tester72 fs_tests/pcycle2.c)
add_executable(tester73 fs_tests/return.c)
add_executable(tester74 fs_tests/simple_1.c)
add_executable(tester76 fs_tests/simple_2.c)
add_executable(tester77 fs_tests/simple_3.c)
add_executable(tester78 fs_tests/strong_update.c)
add_executable(tester79 fs_tests/struct_1.c)
add_executable(tester80 fs_tests/struct_2.c)
add_executable(tester81 fs_tests/test-su.c)
add_test(Tester56 tester56 wpa -ander -stat=false)
add_test(Tester57 tester57 wpa -ander -stat=false)
add_test(Tester58 tester58 wpa -ander -stat=false)
add_test(Tester59 tester59 wpa -ander -stat=false)
add_test(Tester60 tester60 wpa -ander -stat=false)
add_test(Tester61 tester61 wpa -ander -stat=false)
add_test(Tester62 tester62 wpa -ander -stat=false)
add_test(Tester63 tester63 wpa -ander -stat=false)
add_test(Tester64 tester64 wpa -ander -stat=false)
add_test(Tester65 tester65 wpa -ander -stat=false)
add_test(Tester66 tester66 wpa -ander -stat=false)
add_test(Tester67 tester67 wpa -ander -stat=false)
add_test(Tester68 tester68 wpa -ander -stat=false)
add_test(Tester69 tester69 wpa -ander -stat=false)
add_test(Tester70 tester70 wpa -ander -stat=false)
add_test(Tester71 tester71 wpa -ander -stat=false)
add_test(Tester72 tester72 wpa -ander -stat=false)
add_test(Tester73 tester73 wpa -ander -stat=false)
add_test(Tester74 tester74 wpa -ander -stat=false)
add_test(Tester75 tester75 wpa -ander -stat=false)
add_test(Tester76 tester76 wpa -ander -stat=false)
add_test(Tester77 tester77 wpa -ander -stat=false)
add_test(Tester78 tester78 wpa -ander -stat=false)
add_test(Tester79 tester79 wpa -ander -stat=false)
add_test(Tester80 tester80 wpa -ander -stat=false)
add_test(Tester81 tester81 wpa -ander -stat=false)

#context-sensitive tests
add_executable(tester82 cs_tests/cs0.c)
add_executable(tester83 cs_tests/cs1.c)
add_executable(tester84 cs_tests/cs2.c)
add_executable(tester85 cs_tests/cs3.c)
add_executable(tester86 cs_tests/cs4.c)
add_executable(tester87 cs_tests/cs5.c)
add_executable(tester88 cs_tests/cs6.c)
add_executable(tester89 cs_tests/cs7.c)
add_executable(tester90 cs_tests/cs8.c)
add_executable(tester91 cs_tests/cs9.c)
add_executable(tester92 cs_tests/cs10.c)
add_executable(tester93 cs_tests/cs11.c)
add_executable(tester94 cs_tests/cs12.c)
add_executable(tester95 cs_tests/cs13.c)
add_executable(tester96 cs_tests/cs14.c)
add_executable(tester97 cs_tests/cs15.c)
add_executable(tester98 cs_tests/cs16.c)
add_executable(tester99 cs_tests/cs17.c)
add_executable(tester100 cs_tests/cs18.c)
add_executable(tester101 cs_tests/cs19.c)
add_executable(tester102 cs_tests/cs20.c)
add_executable(tester103 cs_tests/funcpoiner.c)
add_executable(tester104 cs_tests/recur0.c)
add_executable(tester105 cs_tests/recur2.c)
add_executable(tester106 cs_tests/recur3.c)
add_executable(tester107 cs_tests/recur4.c)
add_executable(tester108 cs_tests/recur5.c)
add_executable(tester109 cs_tests/recur6.c)
add_executable(tester110 cs_tests/recur7.c)
add_executable(tester111 cs_tests/recur8.c)
add_executable(tester112 cs_tests/recur9.c)
add_executable(tester113 cs_tests/recur10.c)
add_test(Tester82 tester82 dvf -cxt -print-pts=false -stat=false)
add_test(Tester83 tester83 dvf -cxt -print-pts=false -stat=false)
add_test(Tester84 tester84 dvf -cxt -print-pts=false -stat=false)
add_test(Tester85 tester85 dvf -cxt -print-pts=false -stat=false)
add_test(Tester86 tester86 dvf -cxt -print-pts=false -stat=false)
add_test(Tester87 tester87 dvf -cxt -print-pts=false -stat=false)
add_test(Tester88 tester88 dvf -cxt -print-pts=false -stat=false)
add_test(Tester89 tester89 dvf -cxt -print-pts=false -stat=false)
add_test(Tester90 tester90 dvf -cxt -print-pts=false -stat=false)
add_test(Tester91 tester91 dvf -cxt -print-pts=false -stat=false)
add_test(Tester92 tester92 dvf -cxt -print-pts=false -stat=false)
add_test(Tester93 tester93 dvf -cxt -print-pts=false -stat=false)
add_test(Tester94 tester94 dvf -cxt -print-pts=false -stat=false)
add_test(Tester95 tester95 dvf -cxt -print-pts=false -stat=false)
add_test(Tester96 tester96 dvf -cxt -print-pts=false -stat=false)
add_test(Tester97 tester97 dvf -cxt -print-pts=false -stat=false)
add_test(Tester98 tester98 dvf -cxt -print-pts=false -stat=false)
add_test(Tester99 tester99 dvf -cxt -print-pts=false -stat=false)
add_test(Tester100 tester100 dvf -cxt -print-pts=false -stat=false)
add_test(Tester101 tester101 dvf -cxt -print-pts=false -stat=false)
add_test(Tester102 tester102 dvf -cxt -print-pts=false -stat=false)
add_test(Tester103 tester103 dvf -cxt -print-pts=false -stat=false)
add_test(Tester104 tester104 dvf -cxt -print-pts=false -stat=false)
add_test(Tester105 tester105 dvf -cxt -print-pts=false -stat=false)
add_test(Tester106 tester106 dvf -cxt -print-pts=false -stat=false)
add_test(Tester107 tester107 dvf -cxt -print-pts=false -stat=false)
add_test(Tester108 tester108 dvf -cxt -print-pts=false -stat=false)
add_test(Tester109 tester109 dvf -cxt -print-pts=false -stat=false)
add_test(Tester110 tester110 dvf -cxt -print-pts=false -stat=false)
add_test(Tester111 tester111 dvf -cxt -print-pts=false -stat=false)
add_test(Tester112 tester112 dvf -cxt -print-pts=false -stat=false)
add_test(Tester113 tester113 dvf -cxt -print-pts=false -stat=false)

#memory leak test cases
add_executable(tester114 mem_leak/malloc0.c)
add_executable(tester115 mem_leak/malloc1.c)
add_executable(tester116 mem_leak/malloc2.c)
add_executable(tester117 mem_leak/malloc3.c)
add_executable(tester118 mem_leak/malloc4.c)
add_executable(tester119 mem_leak/malloc5.c)
add_executable(tester120 mem_leak/malloc6.c)
add_executable(tester121 mem_leak/malloc7.c)
add_executable(tester122 mem_leak/malloc8.c)
add_executable(tester123 mem_leak/malloc9.c)
add_executable(tester124 mem_leak/malloc10.c)
add_executable(tester125 mem_leak/malloc11.c)
add_executable(tester126 mem_leak/malloc12.c)
add_executable(tester127 mem_leak/malloc13.c)
add_executable(tester128 mem_leak/malloc14.c)
add_executable(tester129 mem_leak/malloc15.c)
add_executable(tester130 mem_leak/malloc16.c)
add_executable(tester131 mem_leak/malloc17.c)
add_executable(tester132 mem_leak/malloc18.c)
add_executable(tester133 mem_leak/malloc19.c)
add_executable(tester134 mem_leak/malloc20.c)
add_executable(tester135 mem_leak/malloc21.c)
add_executable(tester136 mem_leak/malloc22.c)
add_executable(tester137 mem_leak/malloc23.c)
add_executable(tester138 mem_leak/malloc24.c)
add_executable(tester139 mem_leak/malloc25.c)
add_executable(tester140 mem_leak/malloc26.c)
add_executable(tester141 mem_leak/malloc27.c)
add_executable(tester142 mem_leak/malloc28.c)
add_executable(tester143 mem_leak/malloc29.c)
add_executable(tester144 mem_leak/malloc30.c)
add_executable(tester145 mem_leak/malloc31.c)
add_executable(tester146 mem_leak/malloc32.c)
add_executable(tester147 mem_leak/malloc33.c)
add_executable(tester148 mem_leak/malloc34.c)
add_executable(tester149 mem_leak/malloc35.c)
add_executable(tester150 mem_leak/malloc36.c)
add_executable(tester151 mem_leak/malloc37.c)
add_executable(tester152 mem_leak/malloc38.c)
add_executable(tester153 mem_leak/malloc39.c)
add_executable(tester154 mem_leak/malloc40.c)
add_executable(tester155 mem_leak/malloc41.c)
add_executable(tester156 mem_leak/malloc42.c)
add_executable(tester157 mem_leak/malloc43.c)
add_executable(tester158 mem_leak/malloc44.c)
add_executable(tester159 mem_leak/malloc45.c)
add_executable(tester160 mem_leak/malloc46.c)
add_executable(tester161 mem_leak/malloc47.c)
add_executable(tester162 mem_leak/malloc48.c)
add_executable(tester163 mem_leak/malloc49.c)
add_executable(tester164 mem_leak/malloc50.c)
add_executable(tester165 mem_leak/malloc51.c)
add_executable(tester166 mem_leak/malloc52.c)
add_executable(tester167 mem_leak/malloc53.c)
add_executable(tester168 mem_leak/malloc54.c)
add_executable(tester169 mem_leak/malloc55.c)
add_executable(tester170 mem_leak/malloc56.c)
add_executable(tester171 mem_leak/malloc57.c)
add_executable(tester172 mem_leak/malloc58.c)
add_executable(tester173 mem_leak/malloc59.c)
add_executable(tester174 mem_leak/malloc60.c)
add_executable(tester175 mem_leak/malloc61.c)
add_executable(tester176 mem_leak/malloc62.c)
add_executable(tester177 mem_leak/malloc63.c)
add_executable(tester179 mem_leak/sp1.c)
add_executable(tester180 mem_leak/sp10.c)
add_executable(tester181 mem_leak/sp11.c)
add_executable(tester182 mem_leak/sp12.c)
add_executable(tester183 mem_leak/sp12a.c)
add_executable(tester184 mem_leak/sp13.c)
add_executable(tester185 mem_leak/sp13a.c)
add_executable(tester186 mem_leak/sp14.c)
add_executable(tester187 mem_leak/sp14a.c)
add_executable(tester188 mem_leak/sp15.c)
add_executable(tester189 mem_leak/sp15a.c)
add_executable(tester190 mem_leak/sp1a.c)
add_executable(tester191 mem_leak/sp2.c)
add_executable(tester192 mem_leak/sp22.c)
add_executable(tester193 mem_leak/sp2a.c)
add_executable(tester194 mem_leak/sp3.c)
add_executable(tester195 mem_leak/sp3a.c)
add_executable(tester196 mem_leak/sp4.c)
add_executable(tester197 mem_leak/sp41.c)
add_executable(tester198 mem_leak/sp4a.c)
add_executable(tester199 mem_leak/sp5.c)
add_executable(tester200 mem_leak/sp5a.c)
add_executable(tester201 mem_leak/sp6.c)
add_executable(tester202 mem_leak/sp6a.c)
add_executable(tester203 mem_leak/sp7.c)
add_executable(tester204 mem_leak/sp8.c)
add_executable(tester205 mem_leak/sp9.c)
add_test(Tester114 tester114 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester115 tester115 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester116 tester116 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester117 tester117 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester118 tester118 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester119 tester119 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester120 tester120 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester121 tester121 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester122 tester122 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester123 tester123 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester124 tester124 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester125 tester125 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester126 tester126 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester127 tester127 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester128 tester128 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester129 tester129 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester130 tester130 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester131 tester131 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester132 tester132 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester133 tester133 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester134 tester134 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester135 tester135 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester136 tester136 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester137 tester137 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester138 tester138 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester139 tester139 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester140 tester140 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester141 tester141 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester142 tester142 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester143 tester143 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester144 tester144 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester145 tester145 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester146 tester146 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester147 tester147 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester148 tester148 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester149 tester149 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester150 tester150 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester151 tester151 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester152 tester152 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester153 tester153 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester154 tester154 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester155 tester155 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester156 tester156 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester157 tester157 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester158 tester158 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester159 tester159 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester160 tester160 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester161 tester161 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester162 tester162 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester163 tester163 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester164 tester164 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester165 tester165 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester166 tester166 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester167 tester167 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester168 tester168 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester169 tester169 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester170 tester170 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester171 tester171 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester172 tester172 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester173 tester173 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester174 tester174 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester175 tester175 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester176 tester176 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester177 tester177 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester179 tester179 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester180 tester180 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester181 tester181 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester182 tester182 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester183 tester183 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester184 tester184 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester185 tester185 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester186 tester186 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester187 tester187 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester188 tester188 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester189 tester189 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester190 tester190 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester191 tester191 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester192 tester192 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester193 tester193 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester194 tester194 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester195 tester195 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester196 tester196 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester197 tester197 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester198 tester198 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester199 tester199 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester200 tester200 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester201 tester201 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester202 tester202 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester203 tester202 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester204 tester204 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
add_test(Tester205 tester205 saber -leak -valid-tests -mempar=inter-disjoint -stat=false)
